<resources>
    <string name="app_name">MyTreasure</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="confirm">确认密码</string>
    <string name="username_rules">账号为中文，字母或数字，长度为4~20，一个中文算2个长度</string>
    <string name="password_rules">密码以字母开头，长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="username_error">账号错误</string>
    <string name="password_error">密码错误</string>

</resources>
