<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/et_username"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_54"
        android:layout_marginRight="@dimen/dp_54"
        android:layout_marginTop="@dimen/dp_60"
        android:drawableLeft="@drawable/edit_bg_username"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_password"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_54"
        android:layout_marginRight="@dimen/dp_54"
        android:drawableLeft="@drawable/edit_bg_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_confirm"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_54"
        android:layout_marginRight="@dimen/dp_54"
        android:drawableLeft="@drawable/edit_confirm_password"
        android:hint="@string/confirm"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_54"
        android:layout_marginRight="@dimen/dp_54"
        android:layout_marginTop="@dimen/dp_14"
        android:enabled="false"
        android:text="@string/register"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_20"
            android:src="@drawable/screen_bottom_line" />
    </RelativeLayout>

</LinearLayout>